@@ -29,6 +29,7 @@ int ldap_do_add(const char *account, const char *password, const char *email);
 int ldap_rename_account(char *oldaccount, char *newaccount);
 int ldap_delete_account(char *account);
 int ldap_do_modify(const char *account, const char *password, const char *email);
+int ldap_get_user_info(char *account, char **email);
 
 void ldap_close();
 
