@@ -1,6 +1,16 @@
 /***********************************************************************
 X3 ChangeLog
 
+2007-02-09  Alex Schumann  <rubin@afternet.org>
+
+        * src/x3ldap.c: addid search function to get users email address from
+	ldap
+
+	* src/x3ldap.h: func defs for search
+
+	* src/nicserv.c: update local copy of email address when they log
+	in via ldap
+
 2007-02-08  Alex Schumann  <rubin@afternet.org>
 
         * src/x3ldap.c: cleaning up and switching adduser to use the new
